# contextgrab

./: .gitignore  LICENSE  README.md  pyproject.toml
contextgrab/: cli.py
tests/: test_cli.py
