[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextgrab"
version = "0.1.0"
description = "Simple CLI to copy file contents recursively respecting .gitignore"
authors = [{name="Nathan Suttie"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pathspec>=0.11",
    "pyperclip>=1.8",
    "nbformat>=5.9",
]

[project.scripts]
contextgrab = "contextgrab.cli:main"
